[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/levels/repair_station/repaire_station.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/repair_station/assets/Station.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/assets/enemy_healthbar.png" type="Texture" id=3]
[ext_resource path="res://scenes/levels/repair_station/assets/repair.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="RepairStation" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ActivationArea" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
shape = SubResource( 1 )

[node name="RepairTimer" type="Timer" parent="."]

[node name="HealthBar" type="TextureProgress" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -25.0
margin_right = 12.0
margin_bottom = -23.0
value = 75.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.180392, 0.0235294, 0.0235294, 0.392157 )
tint_progress = Color( 0.792157, 0.737255, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="repairAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[connection signal="body_entered" from="ActivationArea" to="." method="_on_ActivationArea_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_ActivationArea_body_exited"]
[connection signal="timeout" from="RepairTimer" to="." method="_on_RepairTimer_timeout"]
